# RLOpt

./: .flake8  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  NETWORK_LAYOUT_REFACTOR.md  README.md  cspell.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-and-test.yml  python-package-conda.yml
.zed/: settings.json
conf/: config.yaml
configs/: README.md
configs/agents/: ipmd.yaml
configs/tasks/: halfcheetah.yaml
docs/: vqvae_skill_report.md
examples/: network_layout_example.py
notebooks/: test_sac.ipynb
rlopt/: __init__.py  base_class.py  buffer.py  config_base.py  config_loader.py  config_utils.py  configs.py  env_utils.py  evaluation.py  logging_utils.py  type_aliases.py  utils.py
rlopt/agent/: __init__.py  causal_interface_planner.py  hl_skill_diffsr.py  hl_skill_encoder.py  language_skill_generator.py  skill_commander.py  torchrl.py
rlopt/agent/ase/: __init__.py  ase.py  model.py  multi_discriminator.py
rlopt/agent/cts/: __init__.py  cts.py  cts_improved.py  dwm.py  roa.py
rlopt/agent/fast_td3/: __init__.py  fast_td3.py
rlopt/agent/gail/: __init__.py  discriminator.py  gail.py
rlopt/agent/imitation/: __init__.py  latent_commands.py  latent_learning.py  latent_skill.py  utils.py
rlopt/agent/infogail/: __init__.py  infogail.py  skill_discriminator.py
rlopt/agent/ipmd/: __init__.py  ipmd.py  ipmd_bilinear.py  ipmd_diffsr.py  ipmd_simple.py  ipmd_sr.py  module.py  network.py  utils.py
rlopt/agent/l2t/: finetune_student.py  l2t.py  moe.py  policies.py  recurrent_l2t.py
rlopt/agent/pmd/: config_mujoco.yaml
rlopt/agent/ppo/: __init__.py  ppo.py
rlopt/agent/ppo_asym/: ppo_asym.py
rlopt/agent/ppo_dev/: ppo_dev.py
rlopt/agent/ppo_old/: ppo.py
rlopt/agent/ppo_recurrent/: __init__.py  ppo_recurrent.py
rlopt/agent/rl/: __init__.py
rlopt/agent/sac/: __init__.py  fastsac.py  sac.py  sota-implementation.py
rlopt/agent/torch/: __init__.py
rlopt/agent/tsl/: rsl_expert.py  (+2 more)
rlopt/common/: __init__.py  base_class.py  buffer.py  modules.py  type_aliases.py  utils.py
rlopt/envs/: __init__.py  gymlike.py  vec_torch_monitor.py
rlopt/expert/: __init__.py  stream.py
rlopt/imitation/: __init__.py  expert_buffer.py
rlopt/models/: __init__.py  gaussian_policy.py
rlopt/opt/: ac_fgd.py  agd.py  gd.py
rlopt/utils/: utils.py
scripts/: 01_collect_expert_data.py  02_train_ipmd.py  03_train_bc.py  04_compare_methods.py  05_train_gail.py  06_train_infogail.py  07_train_ase.py  README.md  __init__.py  torchrl_test.ipynb
test/: test_buffer.py  test_config.yaml  test_config_l2t.yaml  test_l2t.py  test_model_saving.py  test_ppo.py
tests/: conftest.py  run_sac_profiling_comparison.py  save_load_roundtrip.py  test_compile.py  test_compile_cpu.py  test_config_utils.py  test_expert_buffer.py  test_gail_amp_ase_components.py  test_hl_skill_diffsr.py  test_imitation_pipeline.py  test_ipmd.py  test_ipmd_baseline.py  test_ipmd_components.py  test_ipmd_loco_mujoco.py  test_l2t.py  test_language_skill_generator.py  test_logging_utils.py  test_mlp.py  test_model_saving.py  test_model_saving_sac.py  test_offline_dataset.py  test_ppo.py  test_ppo_halfcheetah_full.py  test_ppo_halfcheetah_v5.py  test_sac.py  test_sac_halfcheetah_full.py  test_sac_halfcheetah_v5.py  test_sac_profiling_simple.py  test_skill_commander.py  verify_setup.py  verify_wandb.py
(+21 files in other folders)
