[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "RLOpt"
version = "0.2.0"
description = "A Reinforcement Learning providing advanced optimization techniques and methods optimized for modern RL applications"
authors = ["Feiyang Wu <feiyangwu@gatech.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "*"
torch = ">=2.2.0"
tensordict = "*"
toml = "*"
gymnasium = "*"
stable_baselines3 = "*"
torchrl = "*"



[tool.poetry.dev-dependencies]
pytest = "^6.2"